Enhance agent panel with session management features
- Added new actions for toggling session list visibility and managing agent sessions.
- Introduced a session manager to handle session-related operations.
- Updated keymaps to include new shortcuts for session management.
- Improved context handling for agent sessions, ensuring proper UI updates.

Release Notes:
- N/A

--- a/crates/eval/Cargo.toml
+++ b/crates/eval/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 publish.workspace = true
 edition.workspace = true
 license = "GPL-3.0-or-later"
-default-run = "eval"
+default-run = "zed-agent"
 
 [lints]
 workspace = true
 
 [[bin]]
-name = "eval"
+name = "zed-agent"
 path = "src/eval.rs"
 
 [[bin]]
