--- a/crates/workspace/Cargo.toml
+++ b/crates/workspace/Cargo.toml
@@ -40,6 +40,7 @@ fs.workspace = true
 futures.workspace = true
 gpui.workspace = true
 http_client.workspace = true
+hub_terminal_engine.workspace = true
 itertools.workspace = true
 language.workspace = true
 log.workspace = true
@@ -59,6 +60,8 @@ sqlez.workspace = true
 strum.workspace = true
 task.workspace = true
 telemetry.workspace = true
+terminal.workspace = true
+terminal_view.workspace = true
 theme.workspace = true
 ui.workspace = true
 util.workspace = true
