--- a/crates/zed/Cargo.toml
+++ b/crates/zed/Cargo.toml
@@ -67,6 +67,8 @@ go_to_line.workspace = true
 gpui = { workspace = true, features = ["wayland", "x11", "font-kit"] }
 gpui_tokio.workspace = true
 http_client.workspace = true
+hub_protocol.workspace = true
+hub_terminal_engine.workspace = true
 image_viewer.workspace = true
 indoc.workspace = true
 inline_completion_button.workspace = true
