--- a/crates/workspace/Cargo.toml
+++ b/crates/workspace/Cargo.toml
@@ -31,6 +31,7 @@ anyhow.workspace = true
 async-recursion.workspace = true
 bincode = "1.2.1"
 call.workspace = true
+chrono.workspace = true
 client.workspace = true
 clock.workspace = true
 collections.workspace = true
@@ -40,7 +41,6 @@ fs.workspace = true
 futures.workspace = true
 gpui.workspace = true
 http_client.workspace = true
-hub_terminal_engine.workspace = true
 itertools.workspace = true
 language.workspace = true
 log.workspace = true
@@ -49,6 +49,7 @@ node_runtime.workspace = true
 parking_lot.workspace = true
 postage.workspace = true
 project.workspace = true
+regex.workspace = true
 remote.workspace = true
 schemars.workspace = true
 serde.workspace = true
@@ -61,7 +62,6 @@ strum.workspace = true
 task.workspace = true
 telemetry.workspace = true
 terminal.workspace = true
-terminal_view.workspace = true
 theme.workspace = true
 ui.workspace = true
 util.workspace = true
